# acitx_api

./: .rest  Cargo.toml  README.md
migrations/: 20240831142624_create_schema.sql
src/: main.rs
src/api/: greet.rs  mod.rs  stock.rs  upload.rs  user.rs
src/middlewares/: jwt_middleware.rs  mod.rs
src/models/: mod.rs  processed_stock.rs  stock.rs  user.rs
src/services/: mod.rs  user_service.rs  video_processing.rs
src/utils/: auth_utils.rs  mod.rs
