[package]
name = "acitx-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-rt = "2.5"
actix-service = "2.0"
futures-util = "0.3"
jsonwebtoken = "9.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.30", features = ["full"] }
sqlx = { version = "0.8.1", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "time",
    "uuid",
] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
env_logger = "0.11.5"
bcrypt = "0.15.1"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
